--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li class="burger-menu__list-item">
-              <a href="#" class="burger-menu__list-link menu__link">
+              <a href="catalog.html" class="burger-menu__list-link menu__link">
                 Блюда
               </a>
             </li>
