--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,7 @@
           <a href="#" class="btn">
             Заказать
           </a>
-          <a href="#" class="hero__link">
+          <a href="#" class="hero__link btn--undreline">
             Подробнее
           </a>
         </div>
@@ -203,131 +203,131 @@
             </button>
           </li>
         </ul>
-        <ul class="popular__content">
-          <li class="popular__content-item mix category-a">
-            <img src="images/popular/popular-1.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+        <div class="popular__content">
+          <a class="product-item mix category-a" href="product.html">
+            <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Чизбургер с листьями салата
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               160 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-a">
-            <img src="images/popular/popular-2.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-a" href="product.html">
+            <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Бифбургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               190 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-a">
-            <img src="images/popular/popular-3.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-a" href="product.html">
+            <img src="images/popular/popular-3.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Королевский чизбургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               260 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-a">
-            <img src="images/popular/popular-4.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-a" href="product.html">
+            <img src="images/popular/popular-4.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Черный гамбургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               199 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-a">
-            <img src="images/popular/popular-5.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-a" href="product.html">
+            <img src="images/popular/popular-5.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Чикен бургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               180 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-b">
-            <img src="images/popular/popular-1.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-b" href="product.html">
+            <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Чизбургер с листьями салата
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               160 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-b">
-            <img src="images/popular/popular-2.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-b" href="product.html">
+            <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Бифбургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               190 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-b">
-            <img src="images/popular/popular-3.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-b" href="product.html">
+            <img src="images/popular/popular-3.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Королевский чизбургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               260 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-b">
-            <img src="images/popular/popular-4.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-b" href="product.html">
+            <img src="images/popular/popular-4.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Черный гамбургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               199 грн.
             </span>
             <button class="btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-          <li class="popular__content-item mix category-b">
-            <img src="images/popular/popular-5.jpg" alt="Бургер" class="popular__img" width="140" height="140">
-            <p class="popular__text">
+          </a>
+          <a class="product-item mix category-b" href="product.html">
+            <img src="images/popular/popular-5.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+            <p class="product-item__text">
               Чикен бургер
             </p>
-            <span class="popular__number">
+            <span class="product-item__price">
               180 грн.
             </span>
             <button class="btn btn btn--small" type="button">
               В корзину
             </button>
-          </li>
-        </ul>
-        <button class="popular__button" type="button">
+          </a>
+        </div>
+        <a class="popular__link btn--undreline" href="catalog.html">
           Показать еще
-        </button>
+        </a>
       </div>
     </section>
 
