--- a/app/catalog.html
+++ b/app/catalog.html
@@ -279,153 +279,191 @@
               </form>
             </div>
           </div>
-          <div class="catalog__content">
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Чизбургер с листьями салата
-              </p>
-              <span class="product-item__price">
-                160 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Бифбургер
-              </p>
-              <span class="product-item__price">
-                190 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-3.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Королевский чизбургер
-              </p>
-              <span class="product-item__price">
-                260 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-4.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Черный гамбургер
-              </p>
-              <span class="product-item__price">
-                199 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-5.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Чикен бургер
-              </p>
-              <span class="product-item__price">
-                180 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Чизбургер с листьями салата
-              </p>
-              <span class="product-item__price">
-                160 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Бифбургер
-              </p>
-              <span class="product-item__price">
-                190 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-3.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Королевский чизбургер
-              </p>
-              <span class="product-item__price">
-                260 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-4.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Черный гамбургер
-              </p>
-              <span class="product-item__price">
-                199 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-5.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Чикен бургер
-              </p>
-              <span class="product-item__price">
-                180 грн.
-              </span>
-              <button class="btn btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Чизбургер с листьями салата
-              </p>
-              <span class="product-item__price">
-                160 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
-            <a class="product-item" href="product.html">
-              <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
-              <p class="product-item__text">
-                Бифбургер
-              </p>
-              <span class="product-item__price">
-                190 грн.
-              </span>
-              <button class="btn btn--small" type="button">
-                В корзину
-              </button>
-            </a>
+          <div class="catalog__content-inner">
+            <div class="catalog__content">
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Чизбургер с листьями салата
+                </p>
+                <span class="product-item__price">
+                  160 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Бифбургер
+                </p>
+                <span class="product-item__price">
+                  190 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-3.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Королевский чизбургер
+                </p>
+                <span class="product-item__price">
+                  260 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-4.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Черный гамбургер
+                </p>
+                <span class="product-item__price">
+                  199 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-5.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Чикен бургер
+                </p>
+                <span class="product-item__price">
+                  180 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Чизбургер с листьями салата
+                </p>
+                <span class="product-item__price">
+                  160 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Бифбургер
+                </p>
+                <span class="product-item__price">
+                  190 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-3.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Королевский чизбургер
+                </p>
+                <span class="product-item__price">
+                  260 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-4.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Черный гамбургер
+                </p>
+                <span class="product-item__price">
+                  199 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-5.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Чикен бургер
+                </p>
+                <span class="product-item__price">
+                  180 грн.
+                </span>
+                <button class="btn btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-1.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Чизбургер с листьями салата
+                </p>
+                <span class="product-item__price">
+                  160 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+              <a class="product-item" href="product.html">
+                <img src="images/popular/popular-2.jpg" alt="Бургер" class="product-item__img" width="140" height="140">
+                <p class="product-item__text">
+                  Бифбургер
+                </p>
+                <span class="product-item__price">
+                  190 грн.
+                </span>
+                <button class="btn btn--small" type="button">
+                  В корзину
+                </button>
+              </a>
+            </div>
+            <div class="pagination">
+
+
+              <ul class="pagination__list">
+                <li class="pagination__item">
+                  <a class="pagination__arrow pagination__link" href="#">
+                    <svg class="icon icon-left" width="19" height="11">
+                      <use xlink:href="images/icons.svg#icon-left"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link pagination__link--active" href="#">1</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">2</a>
+                </li>
+                <li class="pagination__item">
+                  ...
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">9</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">10</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__arrow pagination__link" href="#">
+                    <svg class="icon icon-right" width="19" height="11">
+                      <use xlink:href="images/icons.svg#icon-right"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
+
       </div>
     </section>
 
