--- a/app/product.html
+++ b/app/product.html
@@ -358,7 +358,7 @@
         </div>
       </div>
     </div>
-
+<!--
     <section class="resent">
       <div class="container">
         <div class="resent__inner">
@@ -489,7 +489,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
   </main>
 
